--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285791458996@s.whatsapp.net"],
-  "ownerName": ["Riy"],
-  "botName": "Hinata Hyuga Bot",
-  "youtubeOwner": "https://youtube.com/c/Riy",
-  "donasiDana": "081575886399",
-  "donasiGopay": "081575886399",
+  "ownerNumber": ["6282143481050@s.whatsapp.net"],
+  "ownerName": ["Dik"],
+  "botName": "Dicky KUN Bot",
+  "youtubeOwner": "https://instagram.com/yehezkieldicky",
+  "donasiDana": "082143481050",
+  "donasiGopay": "082143481050",
   "sessionName": "session",
   "pathimg": "./media/hinata.jpg",
   "gamewaktu": 90,
